[tool.poetry]
name = "retro-image-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "retro_image_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
